--- a/hw2/arrayDemo.html
+++ b/hw2/arrayDemo.html
@@ -7,10 +7,10 @@
 	</head>
 	<body>
 		<!-- This adds an epic cat gif and a title-->
-		<h1><img src= "rolling-cat-3.gif" alt="rolling cat" style="float:left;width:42px;height:42px;padding-right:25px">Generate Array</h1>
+		<h1><a href = "arrayDemo.html"><img src= "rolling-cat-3.gif" alt="rolling cat" style="float:left;width:42px;height:42px;padding-right:25px"></a><p>Generate Array</p></h1>
 		<hr/>
 		<p>
-		<form action="arrayDemo.php" method="post">
+		<form action="arrayDemo.php" method="post" accept-charset="utf-8">
 			<p>Enter the number of rows:
 			<input type = "text" size="10" name="rows"/></p>
 			
